[package]
name = "maelbolgia"
version = "0.1.0"
authors = ["Ian P. Cooke <ipc@informatic.io>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", default-features = false, optional = true }
futures = { version = "0.3", default-features = false, optional = true }
async-std = { version = "1.6", default-features = false, optional = true }
async-executor = { version = "0.1", default-features = false, optional = true }
scoped-tls = "1.0.0"
thiserror = "1.0"

[features]
default = [ "async-executor-compat" ]
tokio-compat = [ "tokio", "tokio/rt-core" ]
futures-compat = [ "futures" ]
async-std-compat = [ "async-std" ]
async-executor-compat = [ "async-executor" ]
